[metadata]
name = monkeyhex
version = 1.7.4
url = https://github.com/rhelmot/monkeyhex
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
license = MIT
license_files = LICENSE
description = Monkeypatch the python interpreter and debugger to print integer results in hex
long_description = file: README.md
long_description_content_type = text/markdown
author = rhelmot
author_email = audrey@rhelmot.io
keywords =
    hex
    hexadecimal
    monkeypatch
    integer
    number
    interpreter
    result
    debug
    debugger

[options]
install_requires = future
py_modules = monkeyhex
